service-peccy-web/overlays/tyoko/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-peccy-web
  labels:
    app: service-peccy-web
spec:
  template:
    spec:
      containers:
      - name: service-peccy-web
        image: 727618787612.dkr.ecr.ap-northeast-1.amazonaws.com/eks-cicd-dr_service-peccy-web:727618787612.dkr.ecr.ap-northeast-2.amazonaws.com/eks-cicd-dr_service-peccy-web:commit-0f775473775792db26dcf48954dbb92e554416b6
